Format pricing page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-md-5 d-flex">
             <div class="card-body">
               <h5 class="card-title"></h5>
-              <p class="card-text">Ready to take your running to the next level? Fast is Fun provides the support, accountability, motivation and customized plan you need!</p>
+              <p class="card-text">Ready to take your running to the next level? Fast is Fun provides the support, accountability, motivation and customized plans you need!</p>
               <a class="btn btn-info btn-lg" href="about.html" role="button">Services & rates <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
