--- a/services.html
+++ b/services.html
@@ -51,31 +51,34 @@
                 <div class="card-header">
                   <h2 class="my-0 fw-bold">Consultation Call</h2>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title pricing-card-title">Not sure if coaching is right for you?</h5>
+                <div class="card-body d-flex flex-column">
+                  <h3 class="fw-bold mb-4">Free!</h3>
+                  <h5 class="card-title pricing-card-title">Not sure if coaching is right for you? Let's have a chat to help you decide.</h5>
                   <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
                     <li class="ml-4">15 minutes</li>
                     <li class="ml-4">Identify your goals</li>
                     <li class="ml-4">Discover what we can achieve together</li>
                   </ul>
-                  <button type="button" class="btn btn-info btn-lg">Free!</button>
+                  <a type="button" class="btn btn-info btn-lg mt-auto" href="contact.html">Contact me to schedule</a>
                 </div>
               </div>
               <div class="card mb-4 shadow-sm">
                 <div class="card-header">
                   <h2 class="my-0 fw-bold">Fast is Fun Monthly Coaching</h2>
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title pricing-card-title">Try coaching for a month, for a specific race training cycle, or for all your running needs.  Monthly contracts available with discounts on 3-month and 6-month packages.</h5>
+                <div class="card-body d-flex flex-column">
+                  <h3 class="fw-bold mb-4">$150/month*</h3>
+                  <h5 class="card-title pricing-card-title">Try coaching for a month, for a specific race training cycle, or for all your running needs.</h5>
                   <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
-                    <li class="ml-4">Initial consultation to assess your needs and identify you goals</li>
+                    <li class="ml-4">Initial consultation to assess your needs and identify your goals</li>
                     <li class="ml-4">Customized adjustable weekly training plans including workouts, target paces and distances, and cross training</li>
                     <li class="ml-4">Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
                     <li class="ml-4">Weekly training log review via Google Docs commenting</li>
                     <li class="ml-4">Unlimited access to coach via text/email</li>
-                    <li class="ml-4">Bi-monthly 30 minute coach/athlete check-ins via phone or Zoom</li>                  
+                    <li class="ml-4">Bi-monthly 30-minute coach/athlete check-ins via phone or Zoom</li>                  
                   </ul>
-                  <button type="button" class="btn btn-info btn-lg">$150/month</button>
+                  <p>*Discounts available on 3-month and 6-month packages.</p>
+                  <a type="button" class="btn btn-info btn-lg mt-auto" href="contact.html">Contact me to get started</a>
                 </div>
               </div>
             </div>
@@ -88,7 +91,6 @@
     <!-- Footer -->
 <div class="card text-white bg-primary text-center py-0 my-0">
   <div class="card-body">
-    <a class="btn btn-info btn-lg" href="contact.html" role="button">Contact</a>
     <p class="card-text mt-2 mb-1">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
     <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a></u></p>
   </div>
