--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 <div class="card text-white bg-primary text-center py-0 my-0">
     <div class="card-body">
       <p class="card-text mt-2 mb-1">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
-      <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">jordanacaley</a></u></p>
+      <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">Jordan Caley</a></u></p>
     </div>
   </div>
   <!-- Copyright year script -->
