--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text">Ready to take your running to the next level? Fast is Fun provides the support, accountability, motivation and customized plans you need!</p>
-              <a class="btn btn-info btn-lg" href="about.html" role="button">Services & rates <i class="fas fa-arrow-right"></i></a>
+              <a class="btn btn-info btn-lg" href="services.html" role="button">Services & rates <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
