Update all head titles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <title>Fast is Fun</title>
+    <title>Fast is Fun | Run coach</title>
 </head>
 <body>
     <!--Navbar-->
