--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@
                     <li class="ml-4">Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
                     <li class="ml-4">Weekly training log review via Google Docs commenting</li>
                     <li class="ml-4">Unlimited access to coach via text/email</li>
-                    <li class="ml-4">Bi-monthly 30-minute coach/athlete check-ins via phone or Zoom</li>                  
+                    <li class="ml-4">Bi-monthly 30-minute coach/athlete check-ins via phone or Zoom (or in person for runners based in Philadelphia)</li>                  
                   </ul>
                   <p>*Discounts available on 3-month and 6-month packages.</p>
                   <a type="button" class="btn btn-info btn-lg mt-auto" href="contact.html">Contact me to get started</a>
@@ -89,12 +89,12 @@
 
 
     <!-- Footer -->
-<div class="card text-white bg-primary text-center py-0 my-0">
-  <div class="card-body">
-    <p class="card-text mt-2 mb-1">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
-    <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">Jordan Caley</a></u></p>
-  </div>
-</div>
+    <div class="card text-white bg-primary text-center mb-0">
+      <div class="card-body py-1">
+        <p class="card-text mt-2 mb-0">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
+        <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">Jordan Caley</a></u></p>
+      </div>
+    </div>
 <!-- Copyright year script -->
 <script> document.querySelector("#copyright-year").innerText=new Date().getFullYear();</script>
 
