--- a/contact.html
+++ b/contact.html
@@ -58,12 +58,12 @@
 
 
 <!-- Footer -->
-<div class="card text-white bg-primary text-center py-0 my-0">
-    <div class="card-body">
-      <p class="card-text mt-2 mb-1">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
-      <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">Jordan Caley</a></u></p>
-    </div>
+<div class="card text-white bg-primary text-center mb-0">
+  <div class="card-body py-1">
+    <p class="card-text mt-2 mb-0">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
+    <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">Jordan Caley</a></u></p>
   </div>
+</div>
   <!-- Copyright year script -->
   <script> document.querySelector("#copyright-year").innerText=new Date().getFullYear();</script>
 
