--- a/why-coach.html
+++ b/why-coach.html
@@ -59,10 +59,10 @@
 
 
 <!-- Footer -->
-<div class="card text-white bg-primary text-center py-0 my-0">
-  <div class="card-body">
+<div class="card text-white bg-primary text-center mb-0">
+  <div class="card-body py-1">
     <a class="btn btn-info btn-lg" href="contact.html" role="button">Contact</a>
-    <p class="card-text mt-2 mb-1">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
+    <p class="card-text mt-2 mb-0">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
     <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">Jordan Caley</a></u></p>
   </div>
 </div>
