--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="col-md-5 d-flex">
             <div class="card-body">
               <h5 class="card-title"></h5>
-              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast based in Philadelphia.  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
+              <p class="card-text">Hi!  I’m Chelsea, a life-long runner and fitness enthusiast.  I’m a middle of the pack runner who dabbles in triathlon, and loves to eat, travel, and race (or even better - to combine all three!).</p>
               <a class="btn btn-info btn-lg" href="about.html" role="button">More about me <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
