--- a/why-coach.html
+++ b/why-coach.html
@@ -51,6 +51,7 @@
               <p class="card-text">Run coaches are for all runners - any pace, and for any race.  You don’t have to be an elite runner or a front of the pack runner in order to have a coach - all you need to do is be a runner!  From wanting to finish a 5k without walking to completing your very first marathon, a run coach can help you get there.</p>
               <p class="card-text">Looking for someone to keep you accountable?  Frustrated that you can’t seem to make progress on your own?  Worried about injury?  Need someone to tell you to chill out and actually take that rest day?  Looking for that elusive PR or qualifying time?  Do you simply want to run stronger, better, and faster?  I’m here to be your run coach to help you on your running journey!  With custom training plans written specifically for you with your needs, goals, strengths and weaknesses addressed, you can take the stress out of training and simply focus on the fun part - actually running.  </p>
               <p class="card-text">The heart of my coaching philosophy is to keep running fun while helping you reach your goals.  I am supportive and encouraging, though will also keep you disciplined and accountable.  I’m fun, flexible, and knowledgeable, and aim to inspire and encourage you to shoot for and reach goals you didn’t think were possible!</p>
+              <p class="card-text">Based in Philadelphia, I'm happy to work with clients both near and far!</p>
             </div>
           </div>
 
