Add Personalized Training Plans card to Services page

--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
             <div class="card-deck mb-3 text-center">
               <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                  <h2 class="my-0 fw-bold">Consultation Call</h2>
+                  <h2 class="my-0 fw-bold">Consultation <br> Call</h2>
                 </div>
                 <div class="card-body d-flex flex-column">
                   <h3 class="fw-bold mb-4">Free!</h3>
@@ -61,6 +61,20 @@
                     <li class="ml-4">Discover what we can achieve together</li>
                   </ul>
                   <a type="button" class="btn btn-info btn-lg mt-auto" href="contact.html">Contact me to schedule</a>
+                </div>
+              </div>
+              <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                  <h2 class="my-0 fw-bold">Personalized Training Plans</h2>
+                </div>
+                <div class="card-body d-flex flex-column">
+                  <h3 class="fw-bold mb-4">Event specific pricing</h3>
+                  <h5 class="card-title pricing-card-title">Personalized training plans are a great option for someone wanting a bit more personalization than grabbing a stock plan from the internet.</h5>
+                  <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
+                    <li class="ml-4">Initial consultation to assess your needs and identify your goals</li>
+                    <li class="ml-4">Customized personalized training plan including workouts, target paces and distances, based on your current fitness, progress, and race goals</li>
+                  </ul>
+                  <a type="button" class="btn btn-info btn-lg mt-auto" href="contact.html">Contact me for pricing</a>
                 </div>
               </div>
               <div class="card mb-4 shadow-sm">
