Add instagram to header & footer, update services

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="index.html"><img src="images/logo2.png" alt="logo" height="50px"></a>
+        <a class="navbar-brand" href="https://www.instagram.com/fastisfun.co/" target="blank"><i class="fab fa-instagram fa-2x"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -63,7 +64,8 @@
 <div class="card text-white bg-primary text-center mb-0">
   <div class="card-body py-1">
     <a class="btn btn-info btn-lg" href="contact.html" role="button">Contact</a>
-    <p class="card-text mt-2 mb-0">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
+    <p class="mb-0"><a href="https://www.instagram.com/fastisfun.co/" target="blank"><i class="fab fa-instagram fa-2x text-white m-1"></i></a></p>
+    <p class="card-text mt-0 mb-0">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
     <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">Jordan Caley</a></u></p>
   </div>
 </div>
