--- a/services.html
+++ b/services.html
@@ -13,6 +13,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="index.html"><img src="images/logo2.png" alt="logo" height="50px"></a>
+        <a class="navbar-brand" href="https://www.instagram.com/fastisfun.co/" target="blank"><i class="fab fa-instagram fa-2x"></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -79,7 +80,24 @@
               </div>
               <div class="card mb-4 shadow-sm">
                 <div class="card-header">
-                  <h2 class="my-0 fw-bold">Fast is Fun Monthly Coaching</h2>
+                  <h2 class="my-0 fw-bold">Hybrid Coaching</h2>
+                </div>
+                <div class="card-body d-flex flex-column">
+                  <h3 class="fw-bold mb-4">$60/month</h3>
+                  <h5 class="card-title pricing-card-title">A hybrid approach between a personalized training plan and 1-on-1 coaching. This is a great option for someone who wants to be involved with their coach, but doesn’t need as frequent check-ins or feedback as 1-on-1 coaching includes.</h5>
+                  <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
+                    <li class="ml-4">Initial consultation to assess your needs and identify your goals</li>
+                    <li class="ml-4">Customized monthly training plans including workouts, target paces and distances, and cross training</li>
+                    <li class="ml-4">Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
+                    <li class="ml-4">Monthly training log review via Google Docs commenting</li>
+                    <li class="ml-4">Monthly 30 minute coach/athlete check-ins via phone or Zoom</li>
+                  </ul>
+                  <a type="button" class="btn btn-info btn-lg mt-auto" href="contact.html">Contact me to get started</a>
+                </div>
+              </div>
+              <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                  <h2 class="my-0 fw-bold">Fast is Fun Monthly 1-on-1 Coaching</h2>
                 </div>
                 <div class="card-body d-flex flex-column">
                   <h3 class="fw-bold mb-4">$150/month*</h3>
@@ -106,7 +124,9 @@
     <!-- Footer -->
     <div class="card text-white bg-primary text-center mb-0">
       <div class="card-body py-1">
-        <p class="card-text mt-2 mb-0">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
+        <a class="btn btn-info btn-lg" href="contact.html" role="button">Contact</a>
+        <p class="mb-0"><a href="https://www.instagram.com/fastisfun.co/" target="blank"><i class="fab fa-instagram fa-2x text-white m-1"></i></a></p>
+        <p class="card-text mt-0 mb-0">&copy; <span id="copyright-year">2020</span> Fast is Fun</p>
         <p class="card-text mb-0 text-info" style="font-size: 0.75rem;">Web design & development by <u><a class="text-info" href="https://github.com/jordanacaley" target="blank">Jordan Caley</a></u></p>
       </div>
     </div>
