Add font awesome CDN

--- a/services.html
+++ b/services.html
@@ -7,6 +7,7 @@
     <link href="bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="icon" href="images/logo.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Services & Pricing | Fast is Fun</title>
 </head>
 <body>
