--- a/about.html
+++ b/about.html
@@ -34,6 +34,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
+              </li>              
+              <li class="nav-item">
+                <a class="nav-link" href="testimonials.html">Testimonials</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
