--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="services.html">Services</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="testimonials.html">Testimonials</a>
+              </li>
               <li class="nav-item active">
                 <a class="nav-link" href="#">Contact
                   <span class="sr-only">(current)</span>
