--- a/services.html
+++ b/services.html
@@ -36,6 +36,9 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="testimonials.html">Testimonials</a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
