add testimonials card to home

--- a/index.html
+++ b/index.html
@@ -105,6 +105,23 @@
         </div>
       </div>
 
+
+<!--Testimonials-->
+<div id="why-coach" class="card mx-auto text-white bg-info" style="max-width: 75rem;">
+  <div class="row no-gutters">
+    <div class="col-md-5">
+      <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text"><i>Working with Chelsea was a 100% success. Chelsea was the best coach and worked through my minor injuries well, and guided me to a lofty goal.</i> <b>- Vee A.</b></p>
+        <a class="btn btn-primary btn-lg" href="testimonials.html" role="button">More testimonials <i class="fas fa-arrow-right"></i></a>
+      </div>
+    </div>
+    <div class="col-md-7">
+      <img src="images/testimonials.jpg" class="card-img" alt="Two peole running together">
+    </div>
+  </div>
+</div>
+
 <!-- Footer -->
 <div class="card text-white bg-primary text-center mb-0">
   <div class="card-body py-1">
