Update services.html with Training Peaks

--- a/services.html
+++ b/services.html
@@ -92,8 +92,8 @@
                   <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
                     <li class="ml-4">Initial consultation to assess your needs and identify your goals</li>
                     <li class="ml-4">Customized monthly training plans including workouts, target paces and distances, and cross training</li>
-                    <li class="ml-4">Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
-                    <li class="ml-4">Monthly training log review via Google Docs commenting</li>
+                    <li class="ml-4">Training plans sent on Training Peaks for flexibility and communication between athlete and coach</li>
+                    <li class="ml-4">Monthly training log review via Training Peaks comment feature</li>
                     <li class="ml-4">Monthly 30 minute coach/athlete check-ins via phone or Zoom</li>
                   </ul>
                   <a type="button" class="btn btn-info btn-lg mt-auto" href="contact.html">Contact me to get started</a>
@@ -109,8 +109,8 @@
                   <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
                     <li class="ml-4">Initial consultation to assess your needs and identify your goals</li>
                     <li class="ml-4">Customized adjustable weekly training plans including workouts, target paces and distances, and cross training</li>
-                    <li class="ml-4">Training plans sent online via Google Docs for flexibility and communication between athlete and coach</li>
-                    <li class="ml-4">Weekly training log review via Google Docs commenting</li>
+                    <li class="ml-4">Training plans sent on Training Peaks for flexibility and communication between athlete and coach</li>
+                    <li class="ml-4">Weekly training log review via Training Peaks comment feature</li>
                     <li class="ml-4">Unlimited access to coach via text/email</li>
                     <li class="ml-4">Bi-monthly 30-minute coach/athlete check-ins via phone or Zoom (or in person for runners based in Philadelphia)</li>                  
                   </ul>
