--- a/services.html
+++ b/services.html
@@ -87,7 +87,7 @@
                   <h2 class="my-0 fw-bold">Hybrid Coaching</h2>
                 </div>
                 <div class="card-body d-flex flex-column">
-                  <h3 class="fw-bold mb-4">$100/month</h3>
+                  <h3 class="fw-bold mb-4">$135/month</h3>
                   <h5 class="card-title pricing-card-title">A hybrid approach between a personalized training plan and 1-on-1 coaching. This is a great option for someone who wants to be involved with their coach, but doesn’t need as frequent check-ins or feedback as 1-on-1 coaching includes.</h5>
                   <ul class="mt-3 mb-4 text-left"><span class="fw-bold">What's included:</span>
                     <li class="ml-4">Initial consultation to assess your needs and identify your goals</li>
@@ -114,7 +114,7 @@
                     <li class="ml-4">Unlimited access to coach via text/email</li>
                     <li class="ml-4">Bi-monthly 30-minute coach/athlete check-ins via phone or Zoom (or in person for runners based in Philadelphia)</li>                  
                   </ul>
-                  <p>*Discounts available on 3-month and 6-month packages.</p>
+                  <p>*Discounts available on 3-month packages.</p>
                   <a type="button" class="btn btn-info btn-lg mt-auto" href="contact.html">Contact me to get started</a>
                 </div>
               </div>
